--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>창공연구소</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/sub-common.css" />
     <link rel="stylesheet" href="./css/about.css" />
   </head>
   <body>
@@ -16,33 +17,34 @@
             <a href="./index.html"><i class="hidden">창공연구소</i></a>
           </h1>
 
-          <ul class="gnb">
-            <li><a href="./about.html">ABOUT</a></li>
-
-            <li>
-              <a href="./education.html">EDUCATION</a>
-              <ul class="submenu">
-                <li><a href="">DESIGN</a></li>
-                <li><a href="">MARKETING</a></li>
-                <li><a href="">ANALYTICS</a></li>
-              </ul>
-            </li>
-
-            <li>
-              <a href="">쇼츠</a>
-              <ul class="submenu">
-                <li><a href="">유튜브쇼핑</a></li>
-                <li><a href="">클래스</a></li>
-              </ul>
-            </li>
-
-            <li><a href="">디자인 확인</a></li>
-          </ul>
-
-          <div class="join-btn">
-            <a href="#"><i class="hidden">검색</i></a>
-            <a href="#"><i class="hidden">로그인</i></a>
-            <a href="#"><i class="hidden">쇼핑</i></a>
+          <div class="nav-con">
+            <ul class="gnb">
+              <li><a href="./about.html">ABOUT</a></li>
+              <li>
+                <a href="./education.html">EDUCATION</a>
+                <ul class="submenu">
+                  <li><a href="">DESIGN</a></li>
+                  <li><a href="">MARKETING</a></li>
+                  <li><a href="">ANALYTICS</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">쇼츠</a>
+                <ul class="submenu">
+                  <li><a href="">유튜브쇼핑</a></li>
+                  <li><a href="">클래스</a></li>
+                </ul>
+              </li>
+              <li><a href="">디자인 확인</a></li>
+            </ul>
+            <div class="join-btn">
+              <a href="#"><i class="hidden">검색</i></a>
+              <a href="#"><i class="hidden">로그인</i></a>
+              <a href="#"><i class="hidden">쇼핑</i></a>
+            </div>
+            <div class="mo-btn">
+              <a href=""><i class="hidden">더보기</i></a>
+            </div>
           </div>
         </nav>
       </div>
@@ -50,56 +52,58 @@
 
     <main id="main">
       <section class="visual">
-        <div class="inner">
-          <dl class="title">
-            <dt>ABOUT US</dt>
-            <dd>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
-              ab assumenda doloribus omnis beatae earum porro dolorem tempore
-              nam sequi sint quidem minus recusandae unde accusantium maxime
-              eaque, aliquid iste odio atque pariatur ipsum cupiditate maiores.
-              Dolorem consectetur fugiat quam?
-            </dd>
-          </dl>
+        <div class="visual-text">
+          <h2>ABOUT US</h2>
+          <p>
+            창공연구소는 2015년 설립된 이커머스 및 빅데이터 교육 기관으로,
+            실질적인 매출을 내는 대표들이 강의하고, 다양한 네트워크와 컨설팅을
+            지원합니다.
+          </p>
         </div>
+        <figure><img src="./img/visual-2-1.jpg" alt="#" /></figure>
       </section>
 
       <section class="about">
-        <!-- ul.about-con>(li>(dl>dt+dd)+(figure>img))*3 -->
         <div class="inner">
           <ul class="about-con">
             <li>
-              <dl>
+              <dl class="about-text">
                 <dt>실제 전문가 그룹</dt>
                 <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                  explicabo ut tempore eligendi? Sint repellat officiis, eum
-                  doloremque omnis magni?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Inventore facilis nesciunt officiis aliquid hic fugiat magnam,
+                  repudiandae incidunt obcaecati! Totam.
                 </dd>
               </dl>
-              <figure><img src="" alt="#" /></figure>
+              <figure>
+                <img src="./img/about-1.jpg" alt="#" />
+              </figure>
             </li>
             <li>
-              <dl>
-                <dt>체계적인 커리큘럼</dt>
+              <dl class="about-text">
+                <dt>체계적인 커리큘럼 및 전자 자격증 획득까지</dt>
                 <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                  explicabo ut tempore eligendi? Sint repellat officiis, eum
-                  doloremque omnis magni?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Inventore facilis nesciunt officiis aliquid hic fugiat magnam,
+                  repudiandae incidunt obcaecati! Totam.
                 </dd>
               </dl>
-              <figure><img src="" alt="#" /></figure>
+              <figure>
+                <img src="./img/about-2.jpg" alt="#" />
+              </figure>
             </li>
             <li>
-              <dl>
+              <dl class="about-text">
                 <dt>신뢰와 믿음으로 시작</dt>
                 <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                  explicabo ut tempore eligendi? Sint repellat officiis, eum
-                  doloremque omnis magni?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Inventore facilis nesciunt officiis aliquid hic fugiat magnam,
+                  repudiandae incidunt obcaecati! Totam.
                 </dd>
               </dl>
-              <figure><img src="" alt="#" /></figure>
+              <figure>
+                <img src="./img/about-3.jpg" alt="#" />
+              </figure>
             </li>
           </ul>
         </div>
@@ -120,8 +124,6 @@
               </div>
             </div>
             <div class="map-wrap">
-              <!-- * 카카오맵 - 지도퍼가기 -->
-              <!-- 1. 지도 노드 -->
               <div
                 id="daumRoughmapContainer1734592229954"
                 class="root_daum_roughmap root_daum_roughmap_landing"
@@ -131,7 +133,7 @@
                 class="daum_roughmap_loader_script"
                 src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"
               ></script>
-              <!-- 3. 실행 스크립트 -->
+
               <script charset="UTF-8">
                 new daum.roughmap.Lander({
                   timestamp: "1734592229954",
@@ -139,6 +141,7 @@
                   mapWidth: "900",
                   mapHeight: "550",
                 }).render();
+                window.addEventListener("resize", resizeMap);
               </script>
             </div>
           </div>
@@ -172,10 +175,6 @@
                   <dt>상담 이메일</dt>
                   <dd>cg-lab@naver.com</dd>
                 </dl>
-                <dl>
-                  <dt>상담채널</dt>
-                  <dd>우측하단</dd>
-                </dl>
               </div>
 
               <div class="foot-time">
@@ -196,35 +195,17 @@
               </div>
 
               <div class="foot-text">
-                <dl>
-                  <dt>상호명</dt>
-                  <dd>창공연구소</dd>
-                </dl>
-                <dl>
-                  <dt>대표자명</dt>
-                  <dd>정종실</dd>
-                </dl>
-                <dl>
-                  <dt>사업장 주소</dt>
-                  <dd>04563 서울시 중구 장충단로13길 20 11층 D37</dd>
-                </dl>
-                <dl>
-                  <dt>대표 전화</dt>
-                  <dd>0507-1366-4441 사업자 등록번호 202-44-65938</dd>
-                </dl>
-                <dl>
-                  <dt>통신판매업 신고번호</dt>
-                  <dd>2024-서울중구-0413 [사업자정보확인]</dd>
-                </dl>
-                <dl>
-                  <dt>개인정보보호책임자</dt>
-                  <dd>정종실</dd>
-                </dl>
+                <p>대표자 : 정종실</p>
+                <p>주소 : 서울시 중구 장충단로13길 20 11층 D37</p>
+                <p>사업자 등록번호 : 202-44-65938</p>
+                <p>통신판매업 신고번호 : 2024-서울중구-0413</p>
               </div>
             </address>
           </div>
         </div>
       </div>
     </footer>
+
+    <button class="btn"><i class="hidden">고객센터</i></button>
   </body>
 </html>
