--- a/index.html
+++ b/index.html
@@ -24,37 +24,34 @@
             <a href="./index.html"><i class="hidden">창공연구소</i></a>
           </h1>
 
-          <ul class="gnb">
-            <li><a href="./about.html">ABOUT</a></li>
-
-            <li>
-              <a href="./education.html">EDUCATION</a>
-              <ul class="submenu">
-                <li><a href="">DESIGN</a></li>
-                <li><a href="">MARKETING</a></li>
-                <li><a href="">ANALYTICS</a></li>
-              </ul>
-            </li>
-
-            <li>
-              <a href="">쇼츠</a>
-              <ul class="submenu">
-                <li><a href="">유튜브쇼핑</a></li>
-                <li><a href="">클래스</a></li>
-              </ul>
-            </li>
-
-            <li><a href="">디자인 확인</a></li>
-          </ul>
-
-          <div class="join-btn">
-            <a href="#"><i class="hidden">검색</i></a>
-            <a href="#"><i class="hidden">로그인</i></a>
-            <a href="#"><i class="hidden">쇼핑</i></a>
-          </div>
-
-          <div class="mo-btn">
-            <a href=""><i class="hidden">더보기</i></a>
+          <div class="nav-con">
+            <ul class="gnb">
+              <li><a href="./about.html">ABOUT</a></li>
+              <li>
+                <a href="./education.html">EDUCATION</a>
+                <ul class="submenu">
+                  <li><a href="">DESIGN</a></li>
+                  <li><a href="">MARKETING</a></li>
+                  <li><a href="">ANALYTICS</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">쇼츠</a>
+                <ul class="submenu">
+                  <li><a href="">유튜브쇼핑</a></li>
+                  <li><a href="">클래스</a></li>
+                </ul>
+              </li>
+              <li><a href="">디자인 확인</a></li>
+            </ul>
+            <div class="join-btn">
+              <a href="#"><i class="hidden">검색</i></a>
+              <a href="#"><i class="hidden">로그인</i></a>
+              <a href="#"><i class="hidden">쇼핑</i></a>
+            </div>
+            <div class="mo-btn">
+              <a href=""><i class="hidden">더보기</i></a>
+            </div>
           </div>
         </nav>
       </div>
@@ -62,23 +59,19 @@
 
     <main id="main">
       <section class="visual">
-        <div class="swiper">
-          <div class="swiper-wrapper">
+        <div class="swiper visual-swiper">
+          <div class="swiper-wrapper visual-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
               <figure><img src="./img/visual.jpg" alt="#" /></figure>
             </div>
 
             <div class="swiper-slide">
-              <figure><img src="./img/visual.jpg" alt="#" /></figure>
-            </div>
-
-            <div class="swiper-slide">
-              <figure><img src="./img/visual.jpg" alt="#" /></figure>
+              <figure><img src="./img/visual-1.jpg" alt="#" /></figure>
             </div>
           </div>
         </div>
-        <div class="swiper-pagination"></div>
+        <div class="visual-pagination swiper-pagination"></div>
 
         <div class="swiper-button-prev-1"><i class="hidden">이전</i></div>
         <div class="swiper-button-next-1"><i class="hidden">다음</i></div>
@@ -241,5 +234,7 @@
         </div>
       </div>
     </footer>
+
+    <button class="btn"><i class="hidden">고객센터</i></button>
   </body>
 </html>
